--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 
 <!-- Angular Forms-->
-<contact-first></contact-first>
+<!-- <contact-first></contact-first> -->
+<!-- <app-validform></app-validform> -->
+<!-- <custom-valid></custom-valid> -->
 <!-- HostBinding and HostBinding-->
 <!-- <div appCustomdemo style="padding: 20px">Cutom Directive host element</div>
 <!-- Component prarice-->
-<!-- <product1-comp></product1-comp> --> -->
+<!-- <product1-comp></product1-comp> --> 
 
 
 <!-- Pipes demos are render here-->
@@ -21,11 +23,11 @@
 <b myHighlight>Custom directive applied on <b></b>
 <attr-demo></attr-demo>
 <app-switch></app-switch>
-<list-employee></list-employee>
-<app-ngif></app-ngif> -->
+<list-employee></list-employee>-->
+<app-ngif></app-ngif> 
 <!-- Component Practice Product component-->
 <!-- <div>
    <product-comp></product-comp>
 </div> -->
 <br>
-<log-app></log-app>
+<!-- <log-app></log-app> -->
