--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-
+<!-- Services -->
+<app-http></app-http>
+<demo-user></demo-user>
+<!-- <observableDemo-app></observableDemo-app>
+<ObserverdemoComp-app></ObserverdemoComp-app> -->
 <!-- Angular Forms-->
 <!-- <contact-first></contact-first> -->
 <!-- <app-validform></app-validform> -->
@@ -21,10 +25,11 @@
 <!-- <h1>Custon Directive demo render here</h1>
 <p myHighlight>See the text is highligthed !!</p>
 <b myHighlight>Custom directive applied on <b></b>
-<attr-demo></attr-demo>
-<app-switch></app-switch>
-<list-employee></list-employee>-->
-<app-ngif></app-ngif> 
+<attr-demo></attr-demo>-->
+<!-- <app-switch></app-switch> -->
+<!-- <demo-check></demo-check> -->
+<!-- <list-employee></list-employee> -->
+<!-- <app-ngif></app-ngif>  -->
 <!-- Component Practice Product component-->
 <!-- <div>
    <product-comp></product-comp>
