--- a/src/app/directivedemos/TestFor/employeeList.component.html
+++ b/src/app/directivedemos/TestFor/employeeList.component.html
@@ -42,7 +42,7 @@
  </div>
  <div>
      <h1> FullTime Employees .....</h1>
-    <table border="1">
+    <table class="table table-bordered">
    <thead>
        <tr>
            <th>Index</th>
