--- a/src/app/DataBindingDemos/databinding.component.html
+++ b/src/app/DataBindingDemos/databinding.component.html
@@ -1,9 +1,13 @@
-<h4>Property Binding- Element Property Binding</h4>
+{{title}}
+<h4>{{title}}Property Binding- Element Property Binding
+
+</h4>
 Logo: <img [src]="website.logo"/>
 
 <br/>Logo: <img bind-src="website.logo"/>
 
 <br/>Logo: <img src="{{website.logo}}"/>
+
 
 <br/>Url: <a [href]="website.url" [textContent]="website.name"> </a>
 
