--- a/src/app/DataBindingDemos/twoway.component.html
+++ b/src/app/DataBindingDemos/twoway.component.html
@@ -14,9 +14,9 @@
 
  
 
-  <p>Two way from component to View-same as above</p>
+  <!-- <p>Two way from component to View-same as above</p>
   <input [value] ="Thetitle" (input)="Thetitle=$event.target.value"/> 
-  <p>{{Thetitle}}</p>  
+  <p>{{Thetitle}}</p>   -->
 
   <button (click)="showMsg()">ClickHere</button>
   {{msg}}
