--- a/src/app/DemoPipes/testpipes.component.html
+++ b/src/app/DemoPipes/testpipes.component.html
@@ -33,6 +33,11 @@
 </div>
 
 <div>
+    <p>with out  Json pipe</p><br/>
+    <p>{{course}}</p>
+    <p>{{bookObj}}</p>
+</div>
+<div>
     <p>Using Json pipe</p><br/>
     <p>{{course|json}}</p>
     <p>{{bookObj|json}}</p>
