--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,24 @@
+<!-- <com-parent></com-parent> -->
 <!-- Services -->
 <app-http></app-http>
-<demo-user></demo-user>
-<!-- <observableDemo-app></observableDemo-app>
-<ObserverdemoComp-app></ObserverdemoComp-app> -->
+<!--<demo-user></demo-user> -->
+ <!-- <observableDemo-app></observableDemo-app> -->
+<!--ObserverdemoComp-app></ObserverdemoComp-app> -->
 <!-- Angular Forms-->
 <!-- <contact-first></contact-first> -->
 <!-- <app-validform></app-validform> -->
 <!-- <custom-valid></custom-valid> -->
 <!-- HostBinding and HostBinding-->
 <!-- <div appCustomdemo style="padding: 20px">Cutom Directive host element</div>
-<!-- Component prarice-->
+ Component prarice-->
 <!-- <product1-comp></product1-comp> --> 
-
-
+<!-- <login-comp></login-comp> -->
+<!-- <stud-comp></stud-comp> -->
+<!-- <demotwo-way></demotwo-way> -->
+<!-- <prop-element></prop-element> -->
 <!-- Pipes demos are render here-->
 <!-- <pipe-app></pipe-app> -->
-<!-- <app-pipe></app-pipe>
+ <!-- <app-pipe></app-pipe> -->
 <!-- Simple CRUD Operation-->
 <!-- <comp-Simplecurd></comp-Simplecurd> -->
 <!-- Databinding demo render here-->
@@ -24,8 +27,8 @@
 <!-- Directive components are render here-->
 <!-- <h1>Custon Directive demo render here</h1>
 <p myHighlight>See the text is highligthed !!</p>
-<b myHighlight>Custom directive applied on <b></b>
-<attr-demo></attr-demo>-->
+<b myHighlight>Custom directive applied on <b></b> -->
+<!-- <attr-demo></attr-demo> -->
 <!-- <app-switch></app-switch> -->
 <!-- <demo-check></demo-check> -->
 <!-- <list-employee></list-employee> -->
@@ -36,3 +39,18 @@
 </div> -->
 <br>
 <!-- <log-app></log-app> -->
+<!-- <ul>
+   <li><a routerLink="">Home</a></li>
+   <li><a routerLink="about">About</a></li>
+   <li><a routerLink="messages">Messages</a></li>
+   <li><a routerLink="photos">Photos</a></li>
+ </ul>
+ <router-outlet></router-outlet> -->
+ <!-- <pipe-demo></pipe-demo> -->
+ <!-- <i18-demo></i18-demo>
+<currency-demo></currency-demo>
+ <myapp-parent></myapp-parent>
+ <parent-add></parent-add> -->
+ <!-- Reuseable comp-->
+ <!-- <app-another></app-another> -->
+ <!-- <lifecycle-sample></lifecycle-sample> -->
