--- a/src/app/directivedemos/TestFor/employeeList.component.html
+++ b/src/app/directivedemos/TestFor/employeeList.component.html
@@ -1,6 +1,35 @@
- <div>
-
- </div>
+ <!-- <div>
+    <input [(ngModel)]="searchText" placeholder="search text goes here">
+    
+    <table class="table table-hover">
+     <thead>
+        <tr>
+            <th>Index</th>
+            <th>Code</th>
+            <th>Name</th>
+            <th>Gender</th>
+            <th>Annual Salary</th>
+            <th>Date of Birth</th>
+            <th>Fulltime Status</th>
+                      
+        </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let employee of  employees | myfilter:searchText;let i=index;">
+                    <td>{{i+1}}</td>
+                    <td>{{employee.code}}</td>
+                        <td>{{employee.name}}</td>
+                        <td>{{employee.gender}}</td>
+                        <td>{{employee.annualSalary}}</td>
+                        <td>{{employee.dateOfBirth}}</td>
+                        <td>{{employee.fulltime}}</td>
+                        
+            </tr>
+            
+        </tbody>
+    </table>       
+      
+ </div> -->
  <div>
      <h1>All Employees .....</h1>
     <table class="table table-hover">
